CHANGES IN VERSION 1.5.*
------------------------

NEW FEATURES

    o genotypeToSnpMatrix has replaced MatrixToSnpMatrix
    o new function snpSummary 
    o cbind and rbind added for VCF objects 

MODIFICATIONS

    o predictCoding and genotypeToSnpMatrix can now handle
      ALT as CharacterList. Structural variants are set to
      empty character ("").


CHANGES IN VERSION 1.5.0
------------------------

NEW FEATURES

    o filterVcf for creating one VCF file from another, using
      FilterRules

MODIFICATIONS

    o writeVcf,connection-method accepts connections with open="a",
      only adding a header if the file does not already exist.

CHANGES IN VERSION 1.3.0
------------------------

NEW FEATURES

    o summarizeVariants() for summarizing counts by sample

    o new VariantType promoterVariants() added to locateVariants()

MODIFICATIONS

    o ref(), alt(), filt() and  qual() accessors for VCF-class now return
      a single variable instead of GRanges with variable as metadata 


CHANGES IN VERSION 1.2.0
------------------------

NEW FEATURES

    o readVcf() has genome argument, can be subset on ranges or VCF elements
      with ScanVcfParam()

    o scanVcfHeader() returns VCFHeader class with accessors fixed, info, geno,
      etc.

    o writeVcf() writes out a VCF file from a VCF class

    o locateVariants() 
        - returns GRanges instead of DataFrame
        - 'region' argument allows specification of variants by region 
        - output includes txID, geneID and cdsID
        - has cache argument for repeated calls over multiple vcf files

    o predictCoding()
        - returns GRanges instead of DataFrame
        - output includes txID, geneID, cdsID, 
          cds-based and protein-based coordinates
 

CHANGES IN VERSION 1.0.0
------------------------

NEW FEATURES

    o readVcf() for reading and parsing VCF files into a SummarizedExperiment 

    o locateVariants() and predictCoding() for identifying amino acid coding