@@ -3,7 +3,7 @@ Type: Package
 Title: Annotation of Genetic Variants 
 Description: Annotate variants, compute amino acid coding changes, 
 	predict coding outcomes
-Version: 1.5.40
+Version: 1.5.41
 Author: Valerie Obenchain, Martin Morgan, Michael Lawrence with
 	contributions from Stephanie Gogarten. 
 Maintainer: Valerie Obenchain <vobencha@fhcrc.org> 
